create openAPI3 to posts service
